--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^1.4.0",
     "vue": "^2.5.2",
+    "vue-awesome": "^2.3.4",
     "vue-localstorage": "^0.5.0",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
