--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "author": "larrysharpe <larry.l.sharpe@gmail.com>",
   "private": true,
   "scripts": {
+    "assets": "http-server -p 8090",
     "dev": "node build/dev-server.js",
+    "dev-full": "concurrently \"npm run start-server\" \"npm run assets\" \"npm start\"",
     "start": "npm run dev",
+    "start-server": "node ../api-layer-node/server",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
@@ -41,6 +44,7 @@
     "chai": "^4.1.2",
     "chalk": "^2.0.1",
     "chromedriver": "^2.27.2",
+    "concurrently": "^3.6.1",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.1",
