--- a/package.json
+++ b/package.json
@@ -10,13 +10,23 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
+    "pug-plain-loader": "^1.0.0",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
+    "vue-awesome": "^3.1.3",
+    "vue-beautiful-chat": "^2.0.0",
+    "vue-localstorage": "^0.6.2",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
+    "vue-socket.io": "^2.1.1-b",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^3.0.0",
+    "@fortawesome/fontawesome-free": "^5.4.1",
     "@vue/cli-plugin-babel": "^3.0.0",
     "@vue/cli-plugin-e2e-cypress": "^3.0.0",
     "@vue/cli-plugin-eslint": "^3.0.0",
