--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "@babel/runtime": "7.0.0-beta.55",
     "bootstrap-vue": "^2.0.0-rc.11",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
@@ -18,6 +19,7 @@
     "vue": "^2.5.17",
     "vue-awesome": "^3.1.3",
     "vue-beautiful-chat": "^2.0.0",
+    "vue-carousel": "^0.16.0-rc2",
     "vue-localstorage": "^0.6.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
