--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
         command: sudo pip install awscli
     - run:
         name: Deploy to S3
-        command: aws s3 sync ./dist s3://circle-production-static-site/docs/ --delete
+        command: aws s3 sync . s3://camaverse.com --delete
 workflows:
   version: 2
   build-deploy:
