--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,59 +1,81 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
 version: 2
+
 jobs:
+  # The build job
   build:
+    working_directory: ~/project
     docker:
-    # specify the version you desire here
-    - image: circleci/node
-
-    # Specify service dependencies here if necessary
-    # CircleCI maintains a library of pre-built images
-    # documented at https://circleci.com/docs/2.0/circleci-images/
-    # - image: circleci/mongo:3.4.4
-
-    working_directory: ~/repo
-
+    - image: circleci/node:10.13
     steps:
+    # Checkout the code from the branch into the working_directory
     - checkout
-
-    # Download and cache dependencies
+    # Log the current branch
+    - run:
+        name: Show current branch
+        command: echo ${CIRCLE_BRANCH}
+    # Restore local dependencies from cache
     - restore_cache:
         keys:
         - v1-dependencies-{{ checksum "package.json" }}
-        # fallback to using the latest cache if no exact match is found
         - v1-dependencies-
-
-    - run: yarn install
-
+    # Install project dependencies
+    - run:
+        name: Install local dependencies
+        command: npm install
+    # Cache local dependencies if they don't exist
     - save_cache:
+        key: v1-dependencies-{{ checksum "package.json" }}
         paths:
         - node_modules
-        key: v1-dependencies-{{ checksum "package.json" }}
-
-    # run tests!
-    - run: yarn build
-  deploy:
-    docker:
-    - image: circleci/python:2.7-jessie
-    working_directory: ~/circleci-docs
-    steps:
+    # Build project with different configuration based on
+    # the current branch
     - run:
-        name: Install awscli
-        command: sudo pip install awscli
+        name: Building
+        command: npm run build
+    # Cache the dist folder for the deploy job
+    - save_cache:
+        key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+        paths:
+        - dist
+
+  # The deploy job
+  deploy:
+    working_directory: ~/project
+    docker:
+    - image: circleci/node:10.13
+    steps:
+    # Log the current branch
+    - run:
+        name: Show current branch
+        command: echo ${CIRCLE_BRANCH}
+    # Restore cache from the build job which contains the
+    # dist folder that needs to be deployed
+    - restore_cache:
+        key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+    # Install AWS cli
+    - run:
+        name: Install aws cli
+        command:
+          sudo apt-get -y -qq install awscli
+    # Deploy to the S3 bucket corresponding to the current branch
     - run:
         name: Deploy to S3
-        command: aws s3 sync . s3://camaverse.com --delete
+        command: aws --region us-east-1 s3 sync dist s3://camaverse.com --delete
+
 workflows:
   version: 2
-  build-deploy:
+  # The build and deploy workflow
+  build_and_deploy:
     jobs:
     - build
+    # The deploy job will only run on the filtered branches and
+    # require the build job to be successful before it starts
     - deploy:
         requires:
         - build
         filters:
           branches:
-            only: master
+            only:
+            - develop
+            - staging
+            - master
