--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,14 +31,7 @@ jobs:
     # the current branch
     - run:
         name: Building
-        command: |
-          if [ "${CIRCLE_BRANCH}" == "staging" ]; then
-              npm run build --mode staging
-          elif [ "${CIRCLE_BRANCH}" == "develop" ]; then
-              npm run build --mode development
-          elif [ "${CIRCLE_BRANCH}" == "master" ]; then
-              npm run build
-          fi
+        command: npm run build
     # Cache the dist folder for the deploy job
     - save_cache:
         key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
