--- a/package.json
+++ b/package.json
@@ -2,14 +2,6 @@
   "name": "camaverse-client-test",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "lint:fix": "npx vue-cli-service lint --fix",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e"
-  },
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.55",
     "bootstrap-vue": "^2.0.0-rc.11",
@@ -42,5 +34,16 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17"
+  },
+  "resolutions": {
+
+  },
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "lint:fix": "npx vue-cli-service lint --fix",
+    "test:unit": "vue-cli-service test:unit",
+    "test:e2e": "vue-cli-service test:e2e"
   }
 }
