--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.55",
-    "bootstrap-vue": "^2.0.0-rc.11",
+    "bootstrap-vue": "^2.1.0",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
@@ -35,9 +35,7 @@
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17"
   },
-  "resolutions": {
-
-  },
+  "resolutions": {},
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
