created the user service

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 VUE_APP_TITLE=Camaverse
 VUE_APP_NSFW=true
+VUE_APP_AUTH_SERVICE_URL=http://localhost:3010/1.0/
+VUE_APP_USER_SERVICE_URL=http://localhost:3010/1.0/users/
