--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
     "register-service-worker": "^1.0.0",
+    "uuid": "^3.4.0",
     "vue": "^2.5.17",
     "vue-awesome": "^3.1.3",
     "vue-beautiful-chat": "^2.0.0",
