--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-awesome": "^3.1.3",
     "vue-beautiful-chat": "^2.0.0",
     "vue-carousel": "^0.16.0-rc2",
+    "vue-cookie-law": "^1.12.0",
     "vue-localstorage": "^0.6.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
