--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_TITLE=Camaverse
 VUE_APP_TITLE_SFW=Website
 VUE_APP_NSFW=true
-VUE_APP_AUTH_SERVICE_URL=http://localhost:3010/1.0/
-VUE_APP_USER_SERVICE_URL=http://localhost:3010/1.0/users/
+VUE_APP_AUTH_SERVICE_URL=http://10.0.0.165:3010/1.0/
+VUE_APP_USER_SERVICE_URL=http://10.0.0.165:3010/1.0/users/
