env file updates

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,11 @@
+PORT=80
 VUE_APP_TITLE=Camaverse (DEVELOP)
+VUE_APP_TITLE_SFW=Camaverse (DEVELOP)
+VUE_APP_NSFW=false
+VUE_APP_AUTH_SERVICE_URL=http://auth.dev.camaverse.com/1.0/
+VUE_APP_USER_SERVICE_URL=http://auth.dev.camaverse.com/1.0/users/
+VUE_APP_SITE_BROADCASTERS=http://broadcasters.dev.camaverse.com/
+VUE_APP_SITE_LEGAL=http://legal.dev.camaverse.com/
+VUE_APP_SITE_SUPPORT=http://support.dev.camaverse.com/
+VUE_APP_SITE_PARTNERS=http://partners.dev.camaverse.com/
+VUE_APP_SITE_BUSINESS=http://business.dev.camaverse.com/
