--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
+PORT=80
 VUE_APP_TITLE=Camaverse
-VUE_APP_TITLE_SFW=Website
+VUE_APP_TITLE_SFW=Camaverse
 VUE_APP_NSFW=true
-VUE_APP_AUTH_SERVICE_URL=http://10.0.0.165:3010/1.0/
-VUE_APP_USER_SERVICE_URL=http://10.0.0.165:3010/1.0/users/
+VUE_APP_AUTH_SERVICE_URL=http://auth.camaverse.com/1.0/
+VUE_APP_USER_SERVICE_URL=http://auth.camaverse.com/1.0/users/
+VUE_APP_SITE_BROADCASTERS=http://broadcasters.camaverse.com/
+VUE_APP_SITE_LEGAL=http://legal.camaverse.com/
+VUE_APP_SITE_SUPPORT=http://support.camaverse.com/
+VUE_APP_SITE_PARTNERS=http://partners.camaverse.com/
+VUE_APP_SITE_BUSINESS=http://business.camaverse.com/
